# usb_camera

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
calib/: calib_e40.yaml  calib_usb_camera.yaml  calib_webcam.yml
cfg/: UsbCameraDyn.cfg
include/: camera_base
include/usb_camera/: ros_usb_camera.h  usb_camera.h  usb_camera_node.h  usb_camera_nodelet.h  usb_camera_ros.h
launch/: node.launch  nodelet.launch  view.launch
src/: ros_usb_camera.cpp  usb_camera.cpp  usb_camera_main.cpp  usb_camera_node.cpp  usb_camera_nodelet.cpp  usb_camera_ros.cpp
