<?xml version="1.0"?>
<package>
    <name>usb_camera</name>
    <version>0.1.0</version>
    <description>The usb_camera package</description>
    <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>camera_base</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>nodelet</run_depend>
    <run_depend>camera_base</run_depend>

    <export>
        <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    </export>
</package>
